Updating to java 17